Fixed button spacing issue

--- a/scss/_adk-img.scss
+++ b/scss/_adk-img.scss
@@ -4,7 +4,8 @@
 }
 
 .thumbnail.brand {
-  // width: $space-xxl;
+  width: $space-xxl;
   margin-bottom: 0;
+  margin-right: $space-xs;
   float: left;
 }
